--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.6.1",
     "@types/swagger-ui-express": "^4.1.2",
+    "@types/uuid": "^8.3.0",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
