--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
       "eslint:recommended",
       "plugin:@typescript-eslint/eslint-recommended",
       "plugin:@typescript-eslint/recommended",
-      "airbnb-base",
+      "airbnb-typescript/base",
       "prettier"
     ],
     "rules": {
