--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "dirty-chai": "2.0.1",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-node": "11.1.0",
