--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "dependencies": {
+    "@types/winston": "^2.4.4",
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "9.0.0",
@@ -53,6 +54,7 @@
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.6",
     "uuid": "8.3.2",
+    "winston": "^3.3.3",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
