--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv": "9.0.0",
     "express": "4.17.1",
     "http-status-codes": "^2.1.4",
+    "jsdoc-plugin-typescript": "^2.0.6",
     "morgan": "^1.10.0",
     "swagger-ui-express": "4.1.6",
     "uuid": "8.3.2",
@@ -81,7 +82,6 @@
     "eslint-plugin-prettier": "3.4.0",
     "husky": "4.3.8",
     "jest": "26.6.3",
-    "jsdoc": "^3.6.7",
     "lint-staged": "10.5.4",
     "nodemon": "2.0.7",
     "prettier": "2.2.1",
